@@ -1,5 +1,8 @@
 2008-03-09  Inge Wallin  <inge@lysator.liu.se>
 
+	Continue towards pure Projection usage.
+	* src/lib/MeasureTool.{h,cpp} (drawPath): Remove function
+
 	Get rid of unnecessary members in GridMap.
 	* src/lib/GridMap.{h,cpp} (resizeMap): remove function
 	(m_imageWidth, m_imageHeight, m_imageRadius): remove members
